[add] problem to be solved

--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -10,8 +10,13 @@
 \maketitle
 
 \section{Introduction}
+
 \section{Problem to be solved}
+
+The aim of this project will be to solve a real life problem that we all experienced. Since the numeric revolution, humans tend to take a ton of pictures. It is especially the case during their holidays, usually coming back with thousands of pictures. The problem that arise then is that human don't have a mean to explore them all other than browsing through them one by one. So, the idea for the project is to create a \textit{Intelligent Picture Browser (IPB).}
+ 
 \section{Resolution requirements}
+
 \section{Gantt chart}
 
 \end{document}
