--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -17,6 +17,8 @@ The aim of this project will be to solve a real life problem that we all experie
  
 \section{Resolution requirements}
 
+The resolution of the problem will take advantage of new opportunities in human-computer interaction such as Virtual Reality and voice recognition. It will also take advantage of advance in the state of the art of image recognition using a neural network.
+
 \section{Gantt chart}
 
 \end{document}
