--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -10,6 +10,15 @@
 \maketitle
 
 \section{Introduction}
+New generation user interfaces are developing day by day, with new tools, devices and different use cases showing up as the common users start using those devices everyday.
+Of those devices, Virtual Reality is expanding as devices get more affordable and many research team started working on it. 
+
+Imagining a future where we would use Virtual Reality on common basis, we thought about what an user could need that doesn't exist right now, and how to implement it to make the user feel comfortable in this totally new environment.
+
+Imagine to have a collection of pictures you took on a trip, or on many trips. Imagine it now in a Virtual Reality environment, with pictures all over the place, like a 3D desk full of pictures not organized in album.
+
+How can we use the Virtual Reality Environment and its computational power to make this collection of pictures organize and easily navigable?
+The more user-friendly way is to have a system that recognizes your pictures, tagging them according to what is in the picture (e.g. a Dog, a sunset, ...), and allows you to query them via speech recognition.
 
 \section{Problem to be solved}
 
