--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -18,7 +18,9 @@ Imagining a future where we would use Virtual Reality on common basis, we though
 Imagine to have a collection of pictures you took on a trip, or on many trips. Imagine it now in a Virtual Reality environment, with pictures all over the place, like a 3D desk full of pictures not organized in album.
 
 How can we use the Virtual Reality Environment and its computational power to make this collection of pictures organize and easily navigable?
-The more user-friendly way is to have a system that recognizes your pictures, tagging them according to what is in the picture (e.g. a Dog, a sunset, ...), and allows you to query them via speech recognition.
+The more user-friendly way is to have a system that recognizes your pictures, tagging them according to what is in the picture (e.g. a Dog, a sunset, ...), and allows you to query them via speech recognition. This query will filter in the environment the pictures you are interested in, and allow you to navigate through them.
+
+This document includes the analysis of the requirements for the \textit{Intelligent Picture Browser} project, and is structured in the following way: Problem to be solved, Resolution requirements, Gantt chart and conclusion.
 
 \section{Problem to be solved}
 
