--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -20,7 +20,7 @@ Imagine to have a collection of pictures you took on a trip, or on many trips. I
 How can we use the Virtual Reality Environment and its computational power to make this collection of pictures organize and easily navigable?
 The more user-friendly way is to have a system that recognizes your pictures, tagging them according to what is in the picture (e.g. a Dog, a sunset, ...), and allows you to query them via speech recognition. This query will filter in the environment the pictures you are interested in, and allow you to navigate through them.
 
-This document includes the analysis of the requirements for the \textit{Intelligent Picture Browser} project, and is structured in the following way: Problem to be solved, Resolution requirements, Gantt chart and conclusion.
+This document includes the analysis of the requirements for the \textit{Intelligent Picture Browser} project, and is structured in the following way: Problem to be solved, Resolution requirements, Gantt chart and conclusions.
 
 \section{Problem to be solved}
 
@@ -31,5 +31,7 @@ The aim of this project will be to solve a real life problem that we all experie
 The resolution of the problem will take advantage of new opportunities in human-computer interaction such as Virtual Reality and voice recognition. It will also take advantage of advance in the state of the art of image recognition using a neural network.
 
 \section{Gantt chart}
+
+\section{Conclusions}
 
 \end{document}
