[Add] Added sections that are presented in the course slides

--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
+\usepackage{todonotes}
 \author{Pierre Gerard - Matteo Marra - Bruno Rocha Pereira}
 \title{Given One \\ Intelligent Picture Browser \\ Requirements and Analysis report}
 \begin{document}
@@ -29,6 +30,44 @@ The aim of this project will be to solve a real life problem that we all experie
 \section{Resolution requirements}
 
 The resolution of the problem will take advantage of new opportunities in human-computer interaction such as Virtual Reality and voice recognition. It will also take advantage of advance in the state of the art of image recognition using a neural network.
+
+\section{Data requirements\todo{}}
+
+\begin{itemize}
+\item type of data
+\item amount of data
+\item data accuracy
+\end{itemize}
+
+\section{Environmental requirements (context of use)\todo{}}
+
+\begin{itemize}
+\item physical environment
+- lighting, noise, movement, dust, ...
+\item social environment
+- synchronous or asynchronous sharing of data, co-located or distributed, ...
+\item organisational environment
+- user support, resources for training, how hierarchical is the management, ...
+\item technical environment
+- technologies the product will run on, compatibility, technological limitations, ...
+\end{itemize}
+
+\section{User characteristics\todo{}}
+
+
+
+key attributes of intended user group
+\begin{itemize}
+\item abilities and skills
+\item nationality and educational background
+\item preferences
+\item physical or mental disabilities
+\item level of expertise (novice, expert, casual user, frequent user, ...)
+
+\end{itemize}
+
+user profile consists of a collection of attributes for a typical user
+
 
 \section{Gantt chart}
 
