[Add] Data requirements

--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -33,11 +33,8 @@ The resolution of the problem will take advantage of new opportunities in human-
 
 \section{Data requirements\todo{}}
 
-\begin{itemize}
-\item type of data
-\item amount of data
-\item data accuracy
-\end{itemize}
+The data this project will use mainly consist in untagged images sets. They will preferably contain recognizable elements and not be blurred. Microscopic pictures will be avoided since the recognition system will be unable to correctly tag it. These sets of images will contain a maximum amount of elements but while still being easy to store. 
+
 
 \section{Environmental requirements (context of use)\todo{}}
 
@@ -53,8 +50,6 @@ The resolution of the problem will take advantage of new opportunities in human-
 \end{itemize}
 
 \section{User characteristics\todo{}}
-
-
 
 key attributes of intended user group
 \begin{itemize}
