[Add] User characteristics

--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -51,6 +51,8 @@ The data this project will use mainly consist in untagged images sets. They will
 
 \section{User characteristics\todo{}}
 
+The usability of this project is going to be straightforward and will not require any particular skill, origin or educational background. However, since the final setup will combine vision and voice recognition, it will unfortunately not be accessible to individuals with blindness and mutism. It will also be harder to access to people with colorblindness. Having a regular access to technologies and computers will be a plus.
+
 key attributes of intended user group
 \begin{itemize}
 \item abilities and skills
