--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -25,7 +25,7 @@ This document includes the analysis of the requirements for the \textit{Intellig
 
 \section{Problem to be solved}
 
-The aim of this project will be to solve a real life problem that we all experienced. Since the numeric revolution, humans tend to take a ton of pictures. It is especially the case during their holidays, usually coming back with thousands of pictures. The problem that arise then is that human don't have a mean to explore them all other than browsing through them one by one. So, the idea for the project is to create a \textit{Intelligent Picture Browser (IPB).}
+The aim of this project will be to solve a real life problem that we all experienced. Since the numeric revolution, humans tend to take a ton of pictures. It is especially true during their holidays, usually coming back with thousands of pictures. The problem that arise then is that human don't usually have a mean to explore them all other than browsing through them one by one. So, the idea for the project is to create a \textit{Intelligent Picture Browser (IPB)} to fill that void.
  
 \section{Resolution requirements}
 
