[Ref] Matteo pls @marmat21

--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -31,7 +31,7 @@ The aim of this project will be to solve a real life problem that we all experie
 
 The resolution of the problem will take advantage of new opportunities in human-computer interaction such as Virtual Reality and voice recognition. It will also take advantage of advance in the state of the art of image recognition using a neural network.
 
-\section{Data requirements\todo{}}
+\section{Data requirements\todo{Matteo.bullshit(this)}}
 
 The data this project will use mainly consist in untagged images sets. They will preferably contain recognizable elements and not be blurred. Microscopic pictures will be avoided since the recognition system will be unable to correctly tag it. These sets of images will contain a maximum amount of elements but while still being easy to store. 
 
@@ -49,21 +49,11 @@ The data this project will use mainly consist in untagged images sets. They will
 - technologies the product will run on, compatibility, technological limitations, ...
 \end{itemize}
 
-\section{User characteristics\todo{}}
+\section{User characteristics\todo{Matteo.bullshit(this)}}
 
 The usability of this project is going to be straightforward and will not require any particular skill, origin or educational background. However, since the final setup will combine vision and voice recognition, it will unfortunately not be accessible to individuals with blindness and mutism. It will also be harder to access to people with colorblindness. Having a regular access to technologies and computers will be a plus.
 
-key attributes of intended user group
-\begin{itemize}
-\item abilities and skills
-\item nationality and educational background
-\item preferences
-\item physical or mental disabilities
-\item level of expertise (novice, expert, casual user, frequent user, ...)
 
-\end{itemize}
-
-user profile consists of a collection of attributes for a typical user
 
 
 \section{Gantt chart}
