--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -29,14 +29,13 @@ The aim of this project will be to solve a real life problem that we all experie
  
 \section{Resolution requirements}
 
-The resolution of the problem will take advantage of new opportunities in human-computer interaction such as Virtual Reality and voice recognition. It will also take advantage of advance in the state of the art of image recognition using a neural network.
+The resolution of the problem will take advantage of new opportunities in human-computer interaction such as Virtual Reality and voice recognition. It will also take advantage of advance in the state of the art of image recognition using a neural network. In this section, we will explore the differents requirements needed for this project.
 
-\section{Data requirements\todo{}}
+\subsection{Data requirements\todo{}}
 
-The data this project will use mainly consist in untagged images sets. They will preferably contain recognizable elements and not be blurred. Microscopic pictures will be avoided since the recognition system will be unable to correctly tag it. These sets of images will contain a maximum amount of elements but while still being easy to store. 
+The data this project will mainly consist of an untagged images sets too big to be processed by an human. They will preferably contain recognizable and typical elements and not be blurred or in bad shape. Microscopic pictures will be avoided since the recognition system will be unable to correctly tag it. These sets of images will contain a limited amount of recognizable elements but while still being easy to store. 
 
-
-\section{Environmental requirements (context of use)\todo{}}
+\subsection{Environmental requirements (context of use)\todo{}}
 
 \begin{itemize}
 \item physical environment
@@ -49,7 +48,7 @@ The data this project will use mainly consist in untagged images sets. They will
 - technologies the product will run on, compatibility, technological limitations, ...
 \end{itemize}
 
-\section{User characteristics\todo{}}
+\subsection{User characteristics\todo{}}
 
 The usability of this project is going to be straightforward and will not require any particular skill, origin or educational background. However, since the final setup will combine vision and voice recognition, it will unfortunately not be accessible to individuals with blindness and mutism. It will also be harder to access to people with colorblindness. Having a regular access to technologies and computers will be a plus.
 
