editer user characteristics

--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -49,9 +49,13 @@ The data this project will use mainly consist in untagged images sets. They will
 - technologies the product will run on, compatibility, technological limitations, ...
 \end{itemize}
 
-\section{User characteristics\todo{Matteo.bullshit(this)}}
+\section{User characteristics}
 
-The usability of this project is going to be straightforward and will not require any particular skill, origin or educational background. However, since the final setup will combine vision and voice recognition, it will unfortunately not be accessible to individuals with blindness and mutism. It will also be harder to access to people with colorblindness. Having a regular access to technologies and computers will be a plus.
+The usability of this project is going to be straightforward and will not require any particular skill, origin or educational background. However, since the final setup will combine vision and voice recognition, it will unfortunately not be accessible to individuals with blindness and mutism. It will also be harder to access to people with colorblindness. 
+
+Having a regular access to technologies and computers will be a plus. 
+Other than in the indicated case, everybody with access to the specified Virtual Reality device, and with knowledge on how to use it, will be able to use all the functionalities of the application.
+
 
 
 
