edited data requirements

--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -35,6 +35,9 @@ The resolution of the problem will take advantage of new opportunities in human-
 
 The data this project will use mainly consist in untagged images sets. They will preferably contain recognizable elements and not be blurred. Microscopic pictures will be avoided since the recognition system will be unable to correctly tag it. These sets of images will contain a maximum amount of elements but while still being easy to store. 
 
+The tags the system will recognize are simple tags (like animals, person, sunset, etc.), and not particular tags, like a specific person or a specific type of car.
+
+
 
 \section{Environmental requirements (context of use)\todo{}}
 
