added data requirements

--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -31,12 +31,12 @@ The aim of this project will be to solve a real life problem that we all experie
 
 The resolution of the problem will take advantage of new opportunities in human-computer interaction such as Virtual Reality and voice recognition. It will also take advantage of advance in the state of the art of image recognition using a neural network.
 
-\section{Data requirements\todo{Matteo.bullshit(this)}}
+\section{Data requirements}
 
 The data this project will use mainly consist in untagged images sets. They will preferably contain recognizable elements and not be blurred. Microscopic pictures will be avoided since the recognition system will be unable to correctly tag it. These sets of images will contain a maximum amount of elements but while still being easy to store. 
+The system is not designed for a particular purpose of pictures, meaning that all kind of pictures can be stored. The limitation on the amount of pictures is given by the storage memory that the computer in use allows.
 
 The tags the system will recognize are simple tags (like animals, person, sunset, etc.), and not particular tags, like a specific person or a specific type of car.
-
 
 
 \section{Environmental requirements (context of use)\todo{}}
@@ -58,9 +58,6 @@ The usability of this project is going to be straightforward and will not requir
 
 Having a regular access to technologies and computers will be a plus. 
 Other than in the indicated case, everybody with access to the specified Virtual Reality device, and with knowledge on how to use it, will be able to use all the functionalities of the application.
-
-
-
 
 
 \section{Gantt chart}
