[add] Resolution requirements : done

--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -44,12 +44,10 @@ The tags the system will recognize are simple tags (like animals, person, sunset
 
 \begin{itemize}
 \item \textbf{Physical environment}: space is needed for the user to freely move in the Virtual Reality environment.
-\item \textbf{Social environment}:
-The system works in an offline, centralized mode. There is no need to share data such as pictures or tags. If users want to share pictures, they have to do it using an external application.
-\item \textbf{Organisational environment}
-- user support, resources for training, how hierarchical is the management, ... \todo{bho!}
+\item \textbf{Social environment}: The system works in an offline, centralized mode. There is no need to share data such as pictures or tags and user's picture privacy will be protected.
+\item \textbf{Organisational environment}: The UI creator will freely do the support for first users.
 \item \textbf{Technical environment}
-The system runs on \textit{HTC Vive}, and it needs a computer with enough computational power and a supported GPU in order to make the Virtual Reality environment work properly. 
+The system runs on \textit{HTC Vive}, and it needs a modern computer with enough computational power and a supported GPU in order to make the Virtual Reality environment work properly. 
 It is possible that the system will be compatible with other Virtual Reality devices that use the same engine as \textit{HTC Vive}.
 \end{itemize}
 
@@ -64,9 +62,19 @@ The usability of this project is going to be as much as straightforward as possi
 
 \subsection{User experience goals}
 
+The main goal is to make the user relive the moment immortalized by the pictures and helping him feel the same emotion once again.
+
 \section{Resolution}
 
 \subsection{Technologies and prototyping}
+
+We can divide this application in three building blocks :
+\begin{itemize}
+	\item A image tagging system,
+	\item A voice recognition,
+	\item A virtual-reality environment.
+\end{itemize}
+
 
 The application will be built using the following developing tools:
 \begin{itemize}
