[Add] Added references for VR

--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -5,9 +5,12 @@
 \usepackage{amssymb}
 \usepackage{todonotes}
 \usepackage{lscape}
+\usepackage{cite}
+\usepackage{hyperref}
 \usepackage{afterpage}
 \author{Pierre Gerard - Matteo Marra - Bruno Rocha Pereira}
 \title{Given One \\ Intelligent Picture Browser \\ Requirements and Analysis report}
+
 \begin{document}
 
 \maketitle
@@ -71,9 +74,9 @@ We can divide this application in three building blocks :
 
 The image tagging system will use a deep-neural network. To avoid spending too much time on that part and because research on that field is quite advanced \todo{cite}, we will use an existing open source software library called \textit{TensorFlow} \todo{cite}. We will also use a trained neural network \todo{cite}
 
-The voice recognition system will probably also use a existing library such as the one written by microsoft\todo{cite}
+The voice recognition system will probably also use a existing library such as the one written by microsoft\footnote{https://msdn.microsoft.com/en-us/library/office/hh361683(v=office.14).aspx}
 
-The VR will be built using the following \textit{Unity Engine 5.4} \todo{cite} for the application graphics and code. \todo{moar}
+The VR will be built using the game engine \textit{Unity3D 5.4} \footnote{https://unity3d.com/} for the application graphics and code. It has been chosen by considering different scientific papers such as \cite{Mazuryk1996} and \cite{calado2013virtual}.
 
 The idea will be to join all the building block together as soon as possible to create a first prototype for testing.
 
@@ -83,10 +86,10 @@ We will ask for continuous feedback from tester to go from prototype to refined 
 
 The evaluation will be mainly field study using other student. We do believe that, since the technologies we use are quite hype and popular, it will be easy to find willing student for testing.
 
-\afterpage{
 \begin{landscape}
 \section{Gantt chart}
 \includegraphics[scale=0.8,angle=0]{static/Gantt-chart.pdf}
 \end{landscape}
-}
+\bibliographystyle{ieeetr}
+\bibliography{requirementsReport}
 \end{document}
